--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/CoffeePOS_Manubag.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqlite-jdbc-3.30.1.jar=src\\sqlite-jdbc-3.30.1.jar
+file.reference.sqlite-jdbc-3.30.1.jar-1=src\\config\\sqlite-jdbc-3.30.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.30.1.jar}
+    ${file.reference.sqlite-jdbc-3.30.1.jar}:\
+    ${file.reference.sqlite-jdbc-3.30.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Java_POS_CoffeeShop
+main.class=pos.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
