--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.sqlite-jdbc-3.30.1.jar=C:\\Users\\PC 34\\Desktop\\Darwin\\POS_Coffee_Shop\\src\\config\\sqlite-jdbc-3.30.1.jar
-user.properties.file=C:\\Users\\PC 34\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.sqlite-jdbc-3.30.1.jar=C:\\Users\\manub\\OneDrive\\Desktop\\JAVA_PROJECT\\POS_Coffee_Shop\\src\\config\\sqlite-jdbc-3.30.1.jar
+user.properties.file=C:\\Users\\manub\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
